<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"

    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@mipmap/title01"
        android:layout_above="@+id/textview4"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/newNameText"
        android:layout_marginTop="60dp"
        android:layout_alignLeft="@+id/newAccountText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Surname"
        android:textSize="20dp"
        android:textColor="#000000"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/newNameText"
        android:layout_alignBaseline="@+id/newNameText"
        android:layout_marginRight="10dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignTop="@+id/newNameText" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/newsubNameText"
        android:layout_toRightOf="@+id/textview4"
        android:layout_alignBottom="@+id/newNameText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="20dp"
        android:textColor="#000000"
        android:id="@+id/textview4"
        android:layout_toRightOf="@+id/newNameText"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/newNameText"
        android:layout_alignBottom="@+id/newNameText"
        android:layout_alignBaseline="@+id/newNameText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/newAccountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/newNameText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/E_mail"
        android:textSize="20dp"
        android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_toLeftOf="@+id/newAccountText"
        android:layout_alignBaseline="@+id/newAccountText"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newpasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/newAccountText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/newpasswordText"
        android:layout_toLeftOf="@+id/newpasswordText"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sex"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/newpasswordText"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="15dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newNameText"
        android:orientation="horizontal"
        android:id="@+id/rgroup"
        android:layout_alignTop="@+id/textView4">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:id="@+id/man" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女"
            android:id="@+id/woman"
            android:layout_marginLeft="20dp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BirthTitle"
        android:textColor="#000000"
        android:textSize="20dp"
        android:id="@+id/textView5"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/rgroup"
        android:layout_marginTop="20dp" />

    <NumberPicker
        android:id="@+id/yearPick"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/rgroup"
        android:layout_alignLeft="@+id/newNameText"

         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BirthY"
        android:id="@+id/textView6"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/yearPick"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/textView5" />

    <NumberPicker
        android:id="@+id/monthPick"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/rgroup"

        android:layout_toRightOf="@+id/textView6"
        android:layout_marginLeft="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BirthM"
        android:id="@+id/textView7"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/monthPick"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/textView5" />
    <NumberPicker
        android:id="@+id/dayPick"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/rgroup"
        android:layout_toRightOf="@+id/textView7"
        android:layout_marginLeft="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BirthD"
        android:id="@+id/textView8"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/dayPick"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/textView5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BirthT"
        android:textColor="#000000"
        android:textSize="20dp"
        android:id="@+id/textView9"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="45dp" />
    <NumberPicker
        android:id="@+id/timePick"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/yearPick"
        android:layout_toRightOf="@+id/textView9"
        android:layout_marginLeft="5dp"
        android:layout_alignRight="@+id/dayPick" />


    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="申請"
        android:background="@drawable/login_btn"
        android:id="@+id/applyNewAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="applyNewAccount"
         />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/News"
        android:id="@+id/newsCheckBox"
        android:layout_above="@+id/applyNewAccount"
        android:layout_alignLeft="@+id/textView9"
        android:onClick="newsBoxChecked" />

</RelativeLayout>